--- a/WebPL/packages.config
+++ b/WebPL/packages.config
@@ -39,6 +39,7 @@
   <package id="Microsoft.IdentityModel.Tokens" version="5.5.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Cors" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb.ru" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.ru" version="4.0.1" targetFramework="net472" />
